--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "homepage": "https://pcsitspl.github.io/pcs_client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,6 +36,8 @@
     "react-switch": "^5.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
