--- a/package.json
+++ b/package.json
@@ -35,12 +35,8 @@
     "react-switch": "^5.0.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
