--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,7 +17,6 @@
     "ag-grid-community": "^25.3.0",
     "ag-grid-react": "^25.3.0",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
     "cookie-parser": "^1.4.5",
     "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^2.0.1",
@@ -25,7 +26,6 @@
     "nodemailer": "^6.6.3",
     "npm": "^6.9.0",
     "react": "^16.8.6",
-    "react-bootstrap": "^2.0.0-beta.4",
     "react-burger-menu": "^2.9.2",
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
