--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.6.3",
     "npm": "^6.9.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.6.1",
     "react-burger-menu": "^2.9.2",
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
