--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "node-mailer": "^0.1.1",
     "nodemailer": "^6.6.3",
     "npm": "^6.9.0",
-    "react": "^16.8.6",
     "react-bootstrap": "^1.6.1",
     "react-burger-menu": "^2.9.2",
-    "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
     "react-spinners": "^0.5.4",
-    "react-switch": "^5.0.0"
+    "react-switch": "^5.0.0",
+    "framer-motion": "^4.1.17",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
