--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.5.4",
     "react-switch": "^5.0.0",
+    "spinners-react": "^1.0.4",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
