--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-burger-menu": "^2.9.2",
     "react-dom": "^17.0.2",
     "react-dom-factories": "^1.0.2",
+    "react-hook-form": "^7.12.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.5.4",
