--- a/package.json
+++ b/package.json
@@ -1,66 +1,74 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-free-regular": "^5.0.13",
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.12.2",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "ag-grid": "^18.1.2",
-    "ag-grid-community": "^25.3.0",
-    "ag-grid-react": "^25.3.0",
-    "axios": "^0.21.1",
-    "cookie-parser": "^1.4.5",
-    "date-fns": "^2.23.0",
-    "font-awesome": "^4.7.0",
-    "framer-motion": "^4.1.17",
-    "http-proxy-middleware": "^2.0.1",
-    "i": "^0.3.6",
-    "jsonwebtoken": "^8.5.1",
-    "node-mailer": "^0.1.1",
-    "nodemailer": "^6.6.3",
-    "npm": "^6.9.0",
-    "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
-    "react-burger-menu": "^2.9.2",
-    "react-dom": "^17.0.2",
-    "react-dom-factories": "^1.0.2",
-    "react-hook-form": "^7.12.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-spinners": "^0.5.4",
-    "react-switch": "^5.0.0",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "concurrently": "^6.2.0",
-    "nodemon": "^2.0.12"
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@coreui/chartjs": "3.0.0",
+		"@coreui/coreui": "4.0.0",
+		"@coreui/icons": "^2.0.1",
+		"@coreui/icons-react": "^2.0.0-rc.0",
+		"@coreui/react": "4.0.0-beta.2",
+		"@coreui/react-chartjs": "2.0.0-rc.0",
+		"@coreui/utils": "^1.3.1",
+		"@fortawesome/fontawesome-free-regular": "^5.0.13",
+		"@fortawesome/fontawesome-free-solid": "^5.0.13",
+		"@fortawesome/fontawesome-svg-core": "^1.2.35",
+		"@fortawesome/free-solid-svg-icons": "^5.15.3",
+		"@fortawesome/react-fontawesome": "^0.1.14",
+		"@material-ui/core": "^4.12.2",
+		"@material-ui/icons": "^4.11.2",
+		"@testing-library/jest-dom": "^5.12.0",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^12.8.3",
+		"ag-grid": "^18.1.2",
+		"ag-grid-community": "^25.3.0",
+		"ag-grid-react": "^25.3.0",
+		"axios": "^0.21.1",
+		"cookie-parser": "^1.4.5",
+		"date-fns": "^2.23.0",
+		"font-awesome": "^4.7.0",
+		"framer-motion": "^4.1.17",
+		"http-proxy-middleware": "^2.0.1",
+		"i": "^0.3.6",
+		"jsonwebtoken": "^8.5.1",
+		"node-mailer": "^0.1.1",
+		"nodemailer": "^6.6.3",
+		"npm": "^6.9.0",
+		"react": "^17.0.2",
+		"react-bootstrap": "^1.6.1",
+		"react-burger-menu": "^2.9.2",
+		"react-dom": "^17.0.2",
+		"react-dom-factories": "^1.0.2",
+		"react-hook-form": "^7.12.2",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.3",
+		"react-spinners": "^0.5.4",
+		"react-switch": "^5.0.0",
+		"styled-components": "^5.3.0",
+		"uuid": "^8.3.2",
+		"web-vitals": "^1.1.2"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"concurrently": "^6.2.0",
+		"nodemon": "^2.0.12"
+	}
 }
