--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-#REACT_APP_lms_url = https://pcs-lms.herokuapp.com
+#REACT_APP_lms_url = https://pcslmsserver.herokuapp.com/
 REACT_APP_lms_url = http://localhost:9002
