--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@coreui/chartjs": "3.0.0",
 		"@coreui/coreui": "4.0.0",
 		"@coreui/icons": "^2.0.1",
 		"@coreui/icons-react": "^2.0.0-rc.0",
-		"@coreui/react": "4.0.0-beta.2",
+		"@coreui/react": "^4.0.0-beta.2",
 		"@coreui/react-chartjs": "2.0.0-rc.0",
 		"@coreui/utils": "^1.3.1",
 		"@fortawesome/fontawesome-free-regular": "^5.0.13",
@@ -40,6 +39,8 @@
 		"react-dom": "^17.0.2",
 		"react-dom-factories": "^1.0.2",
 		"react-hook-form": "^7.12.2",
+		"react-icons": "^4.4.0",
+		"react-modal": "^3.15.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"react-spinners": "^0.5.4",
